--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --main-color: #b22222;
-    --secondary-color: blue;
+    --secondary-color: lightblue;
 }
 
 * {
@@ -24,7 +24,8 @@ header {
     flex-wrap: wrap;
     position: sticky;
     width: 100%;
-    align-items: center;   
+    align-items: center;
+      
 }
 
 header h1 {
@@ -32,6 +33,10 @@ header h1 {
     margin: 0;
     font-size: 36px;
     color: var(--main-color);
+    background-color: var(--secondary-color);
+    width: auto;
+    padding: 5px;
+
 
 }
 
@@ -51,6 +56,7 @@ header nav ul {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    text-decoration-line: underline;
 }
 
 header nav ul li a {
@@ -71,20 +77,25 @@ header nav ul li a:hover {
     border-radius: 10px;
     background-image: url("../images/IMG_0372.JPG");
     background-size: cover;
-    flex: ;
     width: 100%;
     margin: o;
     padding: 0;
     border: 2 px, solid;
     height: 600px;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-self: flex-end;
     
 }
 
-subtitle h3 {  
+.subtitle h3 {  
     font-size: 26px;
-    border: 1px;
+    background-color: var(--secondary-color);
     padding: 5px;
-    align-self: flex-end;
+    width: 550px;
+   
 }
 
 .about-me {
@@ -97,17 +108,13 @@ subtitle h3 {
     border-radius: 10px;
 }
 
-.about-flex {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
 #work nav ul li a:hover {
     background-color: var(--secondary-color);    
     border-radius: 15px;
     text-shadow: none;
-    box-sizing: content-box;
+    padding: 5px;
+    width: 100px;
+    display: flex;
 }
 
 .first-image {
