--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -214,7 +214,7 @@
     }
     
     .flex-item-4 {
-        background-image: url("../images/20190610_145918.jpg");
+        background-image: url("../images/Landing-image_r.jpg");
         background-size: cover;
         border: 2px solid var(--secondary-color);
         border-radius: 10px;
